--- a/preorder/price.html
+++ b/preorder/price.html
@@ -48,6 +48,7 @@
         background-color: #FFD900;
         border-style: none none solid none;
         border-width: 1px;
+        border-radius: 0px;
     }
     .sex-btn{
         width: 40px;
@@ -83,6 +84,7 @@
     .cbtn{
         background-color:  #FFD900;
         border: none;
+        -webkit-appearance:none;
     }
     @media screen and (max-width: 360px) {
         .main ul{
