--- a/preorder/select.html
+++ b/preorder/select.html
@@ -16,6 +16,8 @@
         margin-bottom: 0px;
         padding-left: 8px;
         padding-right: 8px;
+        padding-top: 0px;
+        padding-bottom: 0px;
         font-size: 20px;
         font-family: "Microsoft YaHei";
         font-weight: bold;
@@ -27,11 +29,6 @@
     a:hover{
         cursor:pointer;
     }
-    @media screen and (min-width: 400px) {
-        a{
-            /*font-size: 25px;*/
-        }
-    } 
 </style>
 </head>
 <body>
