--- a/preorder/price.html
+++ b/preorder/price.html
@@ -14,6 +14,13 @@
     }
     input[type="button"], input[type="submit"], input[type="reset"] {
         -webkit-appearance: none;
+        width: 40px;
+        height: 20px;
+        border-style: solid solid solid solid;
+        border-width: 1px;
+        border-radius: 5px;
+        border-color: #000;
+        background-color: #FFD900;
     }
     .main{
         position: relative;
@@ -40,7 +47,7 @@
     .main ul{
         line-height: 28px;
     }
-    .main2 ul{
+    .main2 ul{ 
         /*width: 240px;*/
     }
     .inf-text{
